--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "echarts": "^5.1.1",
+    "element-ui": "^2.15.1",
+    "less": "^4.1.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
@@ -25,6 +29,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "less-loader": "^7.3.0",
     "vue-template-compiler": "^2.6.11"
   }
 }
